--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -28,3 +28,9 @@ textarea {
 .submit {
     padding-top: 10px;
 }
+
+pre {
+    overflow: auto;
+    white-space: pre-wrap;
+    font-family: Arial, Helvetica, sans-serif;
+}
